fix: edit-progress-dashboard component looks correctly on mobile

--- a/src/app/child-dev-project/progress-dashboard-widget/edit-progress-dashboard/edit-progress-dashboard.component.scss
+++ b/src/app/child-dev-project/progress-dashboard-widget/edit-progress-dashboard/edit-progress-dashboard.component.scss
@@ -20,12 +20,15 @@
 
 .header-field {
   grid-area: header;
+  min-width: 0;
 }
 
 .current-field {
   grid-area: current;
+  min-width: 0;
 }
 
 .target-field {
   grid-area: target;
+  min-width: 0;
 }
